fix wrap id conflict

--- a/static/styles/jaguar.css
+++ b/static/styles/jaguar.css
@@ -11,7 +11,7 @@ ol {
 li {
   list-style-type: none;
 }
-#wrap {
+#pagewrap {
   position: relative;
 }
 ::-webkit-scrollbar {
